[tool.poetry]
name = "arthur-genai-engine-models-k8s"
version = "1.0.0"
description = "OpenShift job to copy ML models to PVC for airgapped environments"
authors = ["Arthur <engineering@arthur.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13.dev0"
# No boto3 needed - uses only Python standard library for PVC copy
huggingface-hub = "^0.36.0"  # Only needed for download_models.py during build

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.26.0"
black = "^26.0.0"
mypy = "^1.13.0"
isort = "^5.13.0"
autoflake = "^2.3.0"

[tool.poetry.scripts]
copy = "copy_models:main"
download = "download_models:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.black]
target-version = ['py312']
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"
testpaths = ["tests"]
asyncio_mode = "auto"
